# substrate-node-template

./: Cargo.toml  Makefile  README.md  debug.sh  test.error
.devcontainer/: devcontainer.json
.github/workflows/: check.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/template/src/: lib.rs  tests.rs
pallets/token/: Cargo.toml
pallets/token/src/: lib.rs  mock.rs  tests.rs
pallets/trade/: Cargo.toml  trade.rs
pallets/trade/src/: lib.rs  mock.rs  tests.rs  types.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: init.sh
