[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'Substrate FRAME pallet trade'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'pallet-trade'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
byteorder = { version = "1.3.1", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
#bytes="0.5.6"
#environmental = "1.1.2"

frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-arithmetic = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
balances = {package = 'pallet-balances', default-features = false, version = '2.0.0' }
randomness-collective-flip = {package = 'pallet-randomness-collective-flip', default-features = false, version = '2.0.0' }
safe-mix = { default-features = false, version = '1.0.0' }


[dependencies.token]
default-features = false
package = 'pallet-token'
path = '../token'
version = '2.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'balances/std',
    'randomness-collective-flip/std',
    'safe-mix/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'sp-io/std',
    'sp-core/std'
]